--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Montserrat:wght@400;600&display=swap');
+/* Font import moved to HTML for better performance */
 
 /* CSS Variables & Imports */
 :root {
